<resources>
    <string name="app_name">Star商城</string>
    <string name="mine">我的</string>
    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    
    <string name="to_login">点击登录</string>
    <string name="logout">退出登录</string>
    <string name="token_error">登录失效，请重新登录</string>

    <string name="my_orders">我的订单</string>
    <string name="my_favorites">我的收藏</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_msg">我的消息</string>

    <string name="create_order">填写订单</string>
    <string name="pay_result">支付结果</string>

    <string name="wares_list">商品列表</string>
</resources>
