<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/colorPrimaryDark">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mine_head_civ"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:src="@drawable/default_head"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/mine_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/to_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mine_orders_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_list_o"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/my_orders"
                android:textColor="@color/black" />

            <View style="@style/line_vertical" />

            <TextView
                android:id="@+id/mine_favorites_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_favorite"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/my_favorites"
                android:textColor="@color/black" />

            <View style="@style/line_vertical" />

            <TextView
                android:id="@+id/mine_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_location"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/my_addresses"
                android:textColor="@color/black" />

            <View style="@style/line_vertical" />

            <TextView
                android:id="@+id/mine_msg_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_msg"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/my_msg"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mine_layout_btn"
                style="@style/bigRedButton"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/logout"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>